force-app/main/default/objects/Leave_Request__c/Leave_Request__c.object-meta.xml
<CustomObject>
    <description>Stores leave requests submitted by employees with multi-level approval tracking.</description>
    <label>Leave Request</label>
    <nameField>
        <displayFormat>LR-{00000}</displayFormat>
        <label>Leave Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>