force-app/main/default/objects/Leave_Request__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>Identifies the active reviewing tier based on duration conditional routing.</description>
    <label>Current Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Manager</fullName><default>true</default><label>Manager</label></value>
            <value><fullName>HR</fullName><default>false</default><label>HR</label></value>
            <value><fullName>Final Approver</fullName><default>false</default><label>Final Approver</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>