force-app/main/default/objects/Leave_Request__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Timestamp when final approval was granted.</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>