force-app/main/default/objects/Leave_Request__c/fields/Final_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Comments__c</fullName>
    <description>Remarks entered by department head / final approver.</description>
    <label>Final Approval Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>