force-app/main/default/objects/Leave_Request__c/fields/HR_Comments__c.field-meta.xml
<CustomField>
    <fullName>HR_Comments__c</fullName>
    <description>Remarks entered by HR reviewer.</description>
    <label>HR Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>