force-app/main/default/objects/Leave_Request__c/fields/Is_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Is_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System flag locked after Final Approval or Rejection to prevent tampering.</description>
    <label>Is Finalized</label>
    <type>Checkbox</type>
</CustomField>