force-app/main/default/objects/Leave_Request__c/fields/Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Leave_Days__c</fullName>
    <description>Calculated number of calendar days of leave requested (inclusive).</description>
    <formula>IF(AND(NOT(ISBLANK(Start_Date__c)), NOT(ISBLANK(End_Date__c))), End_Date__c - Start_Date__c + 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>