force-app/main/default/objects/Leave_Request__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>Category of leave requested.</description>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Casual Leave</fullName><default>true</default><label>Casual Leave</label></value>
            <value><fullName>Sick Leave</fullName><default>false</default><label>Sick Leave</label></value>
            <value><fullName>Earned Leave</fullName><default>false</default><label>Earned Leave</label></value>
            <value><fullName>Emergency Leave</fullName><default>false</default><label>Emergency Leave</label></value>
            <value><fullName>Unpaid Leave</fullName><default>false</default><label>Unpaid Leave</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>