force-app/main/default/objects/Leave_Request__c/fields/Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Comments__c</fullName>
    <description>Remarks or rationale entered by the reporting manager during review.</description>
    <label>Manager Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>