force-app/main/default/objects/Leave_Request__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Timestamp when request was formally submitted for approval.</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>