force-app/main/default/objects/Leave_Request__c/validationRules/VR_Employee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Employee_Required</fullName>
    <active>true</active>
    <description>Ensures leave request is linked to a valid employee record.</description>
    <errorConditionFormula>ISBLANK(Employee__c)</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>Please select the employee record requesting time off.</errorMessage>
</ValidationRule>