force-app/main/default/objects/Leave_Request__c/validationRules/VR_End_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_End_Date_Before_Start_Date</fullName>
    <active>true</active>
    <description>Ensures end date is on or after start date.</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be earlier than Start Date. Please select a valid date range.</errorMessage>
</ValidationRule>