force-app/main/default/objects/Leave_Request__c/validationRules/VR_Prevent_Edit_After_Finalization.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Prevent_Edit_After_Finalization</fullName>
    <active>true</active>
    <description>Prevents unauthorized modifications to leave requests that have reached final decision status.</description>
    <errorConditionFormula>PRIORVALUE(Is_Finalized__c) = TRUE &amp;&amp; NOT(ISCHANGED(Is_Finalized__c))</errorConditionFormula>
    <errorMessage>This leave request has already been finalized and cannot be modified. If your plans change, please submit a new request.</errorMessage>
</ValidationRule>