force-app/main/default/objects/Leave_Request__c/validationRules/VR_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Reason_Required</fullName>
    <active>true</active>
    <description>Requires employee to provide context for their time off.</description>
    <errorConditionFormula>ISBLANK(TRIM(Reason__c))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please provide a brief reason for your leave request so your manager can review it.</errorMessage>
</ValidationRule>